# Dirt-Weeks

./: .gitignore  Cargo.toml  FORMAT.md  README.md  package.json  tsconfig.json
app/: app.vue
app/tourney-api-gen/: event_type.ts  event_variants.ts  index.ts  message_table.ts  message_type.ts  post_event_reducer.ts  send_message_reducer.ts  send_message_sched_reducer.ts  send_message_schedule_table.ts  send_message_schedule_type.ts  server_events_table.ts  server_events_type.ts  server_status_type.ts  server_table.ts  server_type.ts  set_name_reducer.ts  user_type.ts
backend/: Cargo.toml  chat.html  test.txt
backend/src/: main.rs
docker_compose/: compose.yml  pwofserveraccount.txt
docker_compose/prometheus/: prometheus.yml
dw26/: Cargo.toml  README.md
dw26/src/: app.rs  main.rs
gbxremote2/: Cargo.toml
gbxremote2/src/: core.rs  lib.rs  types.rs
server test/: compose.yml  pwofserveraccount.txt
server test/prometheus/: prometheus.yml
src/: app.rs
tm-server-client/: Cargo.toml
tm-server-client/src/: core.rs
tm-tourney-manager/: Cargo.toml
