[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["full"] }
#bytes = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "*"

gbxremote2 = { path = "../gbxremote2" }
#dxr = { version = "0", features = [] }


#dashmap = "*"
#reqwest = "0"
#http-body-util = "0.1"
#hyper-util = { version = "0.1", features = ["full"] }
#hyper = { version = "1", features = ["full"] }
#tokio-util = "*"
#futures-util = "*"
#thiserror = "*"
